# ad-pipeline

./: .gitignore  README.md  cli.py  env.template  example_usage.py  pipeline.py  pyproject.toml  test_setup.py
ad_pipeline/: __init__.py  azure_client.py  cli.py  firefly_client.py  models.py
ad_pipeline/clients/: __init__.py  azure_client.py  firefly_client.py  llm_client.py  photoshop_client.py
ad_pipeline/config/: __init__.py  settings.py
ad_pipeline/models/: __init__.py  campaign.py
ad_pipeline/processors/: __init__.py  pipeline_processor.py
ad_pipeline/utils/: __init__.py  file_utils.py  logging_utils.py
example-inputs/: detailed-example-brief.yml  example-brief.yml  summer-athletic-collection.yml  template_16_9.psd  template_1_1.psd  template_9_16.psd
src/: __init__.py  config.py  llm_client.py
