[project]
name = "ad-pipeline"
version = "0.1.0"
description = "GenAI Ad Pipeline for generating ad renditions from campaign briefs"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Andrew Dorton", email = "addorton@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "azure-storage-blob>=12.19.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
    "pillow>=10.0.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.0",
]

[project.scripts]
pipeline = "cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"